style(carousel): fix gap and position

--- a/apps/docs/src/components/home/mentions/mentions.module.css
+++ b/apps/docs/src/components/home/mentions/mentions.module.css
@@ -1,3 +1,3 @@
 .Mentions {
-  margin-top: calc(token(--space-64) * -1);
+  margin-top: calc(token(--space-96) * -1);
 }
