--- a/apps/docs/src/components/shared/carousel/carousel.module.css
+++ b/apps/docs/src/components/shared/carousel/carousel.module.css
@@ -13,5 +13,7 @@
 
   & > div > * {
     margin: 0 token(--space-8);
+    gap: 1rem;
   }
 }
+
